Fix for issue http://goo.gl/6ewQa "Upload a Photo" and "Organize My collection" are overlapping with some image

--- a/web/less/frontend/_mixins.less
+++ b/web/less/frontend/_mixins.less
@@ -5,3 +5,9 @@
   font-style: @style;
   font-weight: @weight;
 }
+
+.min-height(@height) {
+	height: auto !important;
+	height: @height;
+	max-height: @height;
+}
