--- a/web/less/frontend/grid.less
+++ b/web/less/frontend/grid.less
@@ -86,6 +86,36 @@
     padding: 15px 5px 0 0;
   }
 
+//footer
+	li.footer-profile-box-h-list .row-fluid .span6 {
+		width: 100%;
+	}
+  .footer-profile-box li.icon_big_battery {
+	  padding-bottom: 10px;
+  }
+	.footer-profile-box li.icon_big_email, .footer-profile-box li.icon_big_battery {
+		padding-left: 60px!important;
+	}
+	.footer-profile-box-h-list li.icon_big_add {
+		border-bottom: 1px dashed #E98C7A;
+		margin-top: 10px;
+		margin-bottom: 0;
+		padding-bottom: 10px;
+	}
+	.footer-profile-box-h-list li.icon_big_organize {
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
+	.icon_big_add, .icon_big_organize  {
+		background-position: left top;
+	}
+	.footer-profile-box-h-list li.icon_big_add a, .footer-profile-box-h-list li.icon_big_organize a {
+		padding-top: 14px;
+	}
+  .footer-profile-box-h-list .bold-links br{
+	  display: none;
+  }
+
 //footer-links
   ul[role="footer-links"] li a {
     padding: 2px 8px 0 8px;
