--- a/web/less/frontend/main.less
+++ b/web/less/frontend/main.less
@@ -336,6 +336,7 @@ footer .form-horizontal .controls {
   padding-left: 4%;
 }
 
+//Resets
 .row-spacing {
   margin: 7px 0;
 }
@@ -362,6 +363,10 @@ footer .form-horizontal .controls {
 
 .top-padding-10 {
   padding-top: 10px;
+}
+
+.spacing-left {
+	margin-left: 10px;
 }
 
 //column list
@@ -403,6 +408,11 @@ footer p {
   line-height: 15px;
 }
 
+footer a {
+	font-size: 12px;
+	line-height: 15px;
+}
+
 footer h2 {
   font-size: 20px;
   line-height: 20px;
@@ -410,6 +420,9 @@ footer h2 {
   font-style: italic;
   color: @blueDark;
   margin-bottom: 10px;
+	&.no-margin-bottom {
+		margin-bottom: 0;
+	}
 }
 
 .footer-inner {
@@ -504,38 +517,70 @@ ul.footer-profile-box {
 }
 
 ul.footer-profile-box li {
-  border-top: 1px dashed #e98c7a;
-  margin-bottom: 10px;
-  padding-top: 10px;
+  margin-bottom: 2px;
+  padding-top: 15px;
+	padding-bottom: 15px;
   padding-left: 20%;
-  height: auto !important;
-  height: 46px;
-  min-height: 46px;
+  .min-height(46px);
   width: 80%
-}
-
-ul.footer-profile-box li:first-child {
-  border-top: none;
 }
 
 ul.footer-profile-box li p {
   margin-bottom: 0;
 }
 
-.icon_big_add {
-  background: transparent url("@{baseUrl}/icon_big_add.png") no-repeat left center;
+ul.footer-profile-box li.footer-profile-box-h-list {
+	padding-left: 0;
+	width: 100%;
+	.clearfix();
+}
+
+li.footer-profile-box-h-list ul li{
+	padding-left: 0px;
+	list-style: none;
+}
+
+ul.footer-profile-box li.footer-profile-box-h-list ul {
+	margin-left: 0;
+}
+
+ul.footer-profile-box li.icon_big_email p {
+	margin-top: 15px;
+}
+
+.footer-profile-box li.icon_big_email {
+	padding-bottom: 10px;
+}
+
+.footer-profile-box-h-list li.icon_big_add, .footer-profile-box-h-list li.icon_big_organize {
+	min-height: 46px;
+	margin-top: 15px;
+	padding-top: 0;
+	padding-left: 60px;
+	a {
+		padding-top: 6px;
+		display: block;
+	}
+}
+
+.icon_big_email, .icon_big_battery {
+	border-bottom: 1px dashed #e98c7a;
 }
 
 .icon_big_battery {
-  background: transparent url("@{baseUrl}/icon_big_battery.png") no-repeat left center;
+	background: transparent url("@{baseUrl}/icon_big_battery.png") no-repeat left center;
 }
 
 .icon_big_email {
-  background: transparent url("@{baseUrl}/icon_big_email.png") no-repeat left center;
+	background: transparent url("@{baseUrl}/icon_big_email.png") no-repeat left center;
+}
+
+.icon_big_add {
+	background: transparent url("@{baseUrl}/icon_big_add.png") no-repeat left top;
 }
 
 .icon_big_organize {
-  background: transparent url("@{baseUrl}/icon_big_organize.png") no-repeat center left;
+	background: transparent url("@{baseUrl}/icon_big_organize.png") no-repeat left top;
 }
 
 // Fix vertical align issue in IE7
@@ -722,7 +767,7 @@ a.bold-links {
 }
 
 .max-height-video-box-sidebar {
-  max-height: 90px;
+  .min-height(90px);
   overflow: hidden;
 }
 
